# containerised_ros_workspace

./: .gitignore  Dockerfile  README.md  grab-workspace-deps.sh  sample_install-deps.sh
.devcontainer/: Dockerfile  devcontainer.json  grab-workspace-deps.sh  install_dependencies.sh  ros_entrypoint.sh
workspace/non_ros_pkgs/: .gitignore
workspace/non_ros_pkgs/sample-project/: CMakeLists.txt  install-deps.sh
workspace/non_ros_pkgs/sample-project/src/: main.cpp
